; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_libtomcrypt.c_crypto_hash_update.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_libtomcrypt.c_crypto_hash_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_hash = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@CRYPT_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crypto_hash_update(%struct.crypto_hash* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.crypto_hash*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store %struct.crypto_hash* %0, %struct.crypto_hash** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %8 = icmp eq %struct.crypto_hash* %7, null
  br i1 %8, label %14, label %9

9:                                                ; preds = %3
  %10 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %11 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %9, %3
  br label %55

15:                                               ; preds = %9
  %16 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %17 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  switch i32 %18, label %55 [
    i32 129, label %19
    i32 128, label %31
    i32 131, label %43
    i32 130, label %43
  ]

19:                                               ; preds = %15
  %20 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %21 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %20, i32 0, i32 2
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 1
  %23 = load i32*, i32** %5, align 8
  %24 = load i64, i64* %6, align 8
  %25 = call i32 @md5_process(i32* %22, i32* %23, i64 %24)
  %26 = load i32, i32* @CRYPT_OK, align 4
  %27 = icmp ne i32 %25, %26
  %28 = zext i1 %27 to i32
  %29 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %30 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  br label %55

31:                                               ; preds = %15
  %32 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %33 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %32, i32 0, i32 2
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 1
  %35 = load i32*, i32** %5, align 8
  %36 = load i64, i64* %6, align 8
  %37 = call i32 @sha1_process(i32* %34, i32* %35, i64 %36)
  %38 = load i32, i32* @CRYPT_OK, align 4
  %39 = icmp ne i32 %37, %38
  %40 = zext i1 %39 to i32
  %41 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %42 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %41, i32 0, i32 0
  store i32 %40, i32* %42, align 4
  br label %55

43:                                               ; preds = %15, %15
  %44 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %45 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %44, i32 0, i32 2
  %46 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i32 0, i32 0
  %47 = load i32*, i32** %5, align 8
  %48 = load i64, i64* %6, align 8
  %49 = call i32 @hmac_process(i32* %46, i32* %47, i64 %48)
  %50 = load i32, i32* @CRYPT_OK, align 4
  %51 = icmp ne i32 %49, %50
  %52 = zext i1 %51 to i32
  %53 = load %struct.crypto_hash*, %struct.crypto_hash** %4, align 8
  %54 = getelementptr inbounds %struct.crypto_hash, %struct.crypto_hash* %53, i32 0, i32 0
  store i32 %52, i32* %54, align 4
  br label %55

55:                                               ; preds = %14, %15, %43, %31, %19
  ret void
}

declare dso_local i32 @md5_process(i32*, i32*, i64) #1

declare dso_local i32 @sha1_process(i32*, i32*, i64) #1

declare dso_local i32 @hmac_process(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
